# rmq_py_caller

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
examples/: posts.ndjson
examples/basic_contextmanager/: README.md  contextmanager.py  users.json
examples/context_decorator/: README.md
examples/docker-compose_inline/: README.md
examples/my_analytic/: Dockerfile
examples/single_file/: README.md  sample.ndjson  single_file.py
examples/sklearn/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/sklearn/data/: sample.ndjson  sample.schema2.ndjson
examples/sklearn/rmq_sklearn/: predict.py  train.py
my_analytic/: README.md  pyproject.toml
my_analytic/my_analytic/: __init__.py  model.py
my_analytic/tests/: test_my_analytic.py
rmq_py_caller/: __init__.py  __main__.py  app.py  ioloop.py  util.py  worker.py
rmq_pyctx_caller/: __init__.py  __main__.py
