[tool.poetry]
name = "rmq_py_caller"
version = "0.1.0"
description = ""
authors = ["Will Badart <will@willbadart.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jq = "^1.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
