[tool.poetry]
name = "rmq_sklearn"
version = "0.1.0"
description = "Sample sklearn project for rmq_py_caller"
authors = ["Will Badart <will@willbadart.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
